# watercolor-light

./: pyproject.toml
notebooks/: galaxy_color.ipynb
watercolor_light/: __init__.py  calculate_csp.py  filter_convolution.py  ssp_interpolation.py
watercolor_light/data/: __init__.py
watercolor_light/data/filter_specifics/: COSMOS.pickle  LSST.pickle  WISE.pickle  __init__.py
watercolor_light/data/sps_library_data/: __init__.py
watercolor_light/data/test_hacc_stellar_catalog/: Gal_Z0.txt  Gal_Z02.txt  Gal_Z1.txt  Gal_Z2.txt  Gal_Z3.txt  Z_02New.txt
